--- a/fae_tools.ipynb
+++ b/fae_tools.ipynb
@@ -2,13 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-07T18:59:05.443094300Z",
+     "start_time": "2025-11-07T18:59:05.382696200Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image\n",
+    "img = Image.new(\"RGB\", (100, 100), color=\"red\")\n",
+    "img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mImage\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(Image\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__file__\u001B[39m)\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'Image'"
+     ]
+    }
+   ],
+   "source": [
+    "import Image\n",
+    "print(Image.__file__)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-11-07T19:00:21.325171300Z",
+     "start_time": "2025-11-07T19:00:20.926367300Z"
+    }
+   },
+   "id": "704d32f04a44ddf4",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cce17f2c3419cc37"
   }
  ],
  "metadata": {
